Implemented simple command line options parser

--- a/similarity_search/CMakeLists.txt
+++ b/similarity_search/CMakeLists.txt
@@ -62,7 +62,7 @@ elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
         set (CMAKE_CXX_FLAGS_RELEASE "-Wall -Wunreachable-code -Wcast-align -O3 -DNDEBUG -std=c++11 -DHAVE_CXX0X -fpic")
         set (CMAKE_CXX_FLAGS_DEBUG   "-Wall -Wunreachable-code -Wcast-align -ggdb  -DNDEBUG -std=c++11 -DHAVE_CXX0X -fpic")
         set (WITHOUT_LSH YES)
-        set (WITHOUT_SIMD YES)
+        set (PORTABLE_SSE4 YES)
     else()
         set (CMAKE_CXX_FLAGS_RELEASE "-Wall -Wunreachable-code -Wcast-align -O3 -DNDEBUG -std=c++11 -DHAVE_CXX0X -fopenmp -march=native -fpic")
         set (CMAKE_CXX_FLAGS_DEBUG   "-Wall -Wunreachable-code -Wcast-align -ggdb  -DNDEBUG -std=c++11 -DHAVE_CXX0X -fopenmp -march=native -fpic")
@@ -82,12 +82,6 @@ if (WITHOUT_LSH)
     message(STATUS "Will build without LSH")
     add_definitions (-DWITHOUT_LSH=1)
 endif()
-
-if (WITHOUT_SIMD)
-    message(STATUS "Will build without SIMD")
-    add_definitions (-DWITHOUT_SIMD=1)
-endif()
-
 
 if (NOT CMAKE_BUILD_TYPE)
     set (CMAKE_BUILD_TYPE Release CACHE STRING "Build types: Release Debug" FORCE)
@@ -124,7 +118,7 @@ endif ()
 #set (Boost_INCLUDE_DIR ${BOOST_ROOT})
 #set (Boost_LIBRARY_DIR ${BOOST_ROOT}/stage/lib)
 
-find_package (Boost 1.48 COMPONENTS system filesystem program_options REQUIRED)
+find_package (Boost 1.48 COMPONENTS system filesystem REQUIRED)
 
 if (Boost_FOUND)
   message (STATUS "Found BOOST.")
