--- a/similarity_search/CMakeLists.txt
+++ b/similarity_search/CMakeLists.txt
@@ -74,13 +74,19 @@ elseif(WIN32)
          message(FATAL_ERROR "On Windows, only MSVC version 12 is supported!") 
     endif()
     set (WITHOUT_LSH YES)
+    set (WITHOUT_FALCONN YES)
 else ()
     message(FATAL_ERROR "Please, use GCC, Clang, or the Intel compiler!")
 endif()
 
 if (WITHOUT_LSH)
-    message(STATUS "Will build without LSH")
+    message(STATUS "Will build without LSHKIT")
     add_definitions (-DWITHOUT_LSH=1)
+endif()
+
+if (WITHOUT_FALCONN)
+    message(STATUS "Will build without FALCONN")
+    add_definitions (-DWITHOUT_FALCONN=1)
 endif()
 
 if (WITHOUT_SIMD)
@@ -111,18 +117,22 @@ if ((NOT WITHOUT_LSH) AND (NOT WIN32))
   add_subdirectory (lshkit)
 endif()
 
-find_package(Eigen3 3 REQUIRED)
-if (EIGEN3_FOUND)
-  message (STATUS "Found Eigen3.")
-  include_directories (${EIGEN3_INCLUDE_DIR})
-else ()
-  message (FATAL_ERROR "Could not locate Eigen3.")
-endif ()
+if (NOT WIN32)
+  find_package(Eigen3 3 REQUIRED)
+  if (EIGEN3_FOUND)
+    message (STATUS "Found Eigen3.")
+    include_directories (${EIGEN3_INCLUDE_DIR})
+  else ()
+    message (FATAL_ERROR "Could not locate Eigen3.")
+  endif ()
+endif()
 
-# Can be used to hardwire boost location.
-#set (BOOST_ROOT $ENV{HOME}/boost_1_48_0)
-#set (Boost_INCLUDE_DIR ${BOOST_ROOT})
-#set (Boost_LIBRARY_DIR ${BOOST_ROOT}/stage/lib)
+if ((NOT WITHOUT_FALCONN) AND (NOT WIN32))
+  include_directories (${PROJECT_SOURCE_DIR}/falconn)
+  if (NOT EIGEN3_FOUND)
+    message (FATAL_ERROR "FALCONN requires Eigen3, but Eigen3 isn't be found.")
+  endif ()
+endif()
 
 find_package (Boost 1.48 COMPONENTS system filesystem program_options REQUIRED)
 
