Moving apps to separate folders #37 + new Jaccard space

--- a/similarity_search/CMakeLists.txt
+++ b/similarity_search/CMakeLists.txt
@@ -133,5 +133,6 @@ endif()
 
 add_subdirectory (src)
 add_subdirectory (test)
+add_subdirectory (apps)
 
 message (STATUS "Compiler: ${CMAKE_CXX_COMPILER_ID} ${CXX_COMPILER_VERSION}")
