--- a/similarity_search/apps/CMakeLists.txt
+++ b/similarity_search/apps/CMakeLists.txt
@@ -16,6 +16,7 @@ add_executable (bench_distfunc                  bench_distfunc.cc)
 add_executable (report_intr_dim                 report_intr_dim.cc)
 add_executable (test_clust                      test_clust.cc)
 add_executable (bench_projection                bench_projection.cc)
+add_executable (knn_stat                        knn_stat.cc)
 # The following line is necessary to create an executable for the dummy application:
 add_executable (dummy_app dummy_app.cc)
 
@@ -25,6 +26,7 @@ add_dependencies (bench_distfunc      NonMetricSpaceLib)
 add_dependencies (report_intr_dim     NonMetricSpaceLib)
 add_dependencies (test_clust          NonMetricSpaceLib)
 add_dependencies (bench_projection    NonMetricSpaceLib)
+add_dependencies (knn_stat            knn_stat)
 # The following line is necessary to create an executable for the dummy application:
 add_dependencies (dummy_app           NonMetricSpaceLib)
 
@@ -40,6 +42,7 @@ target_link_libraries (bench_distfunc   NonMetricSpaceLib ${LSHKIT_LIB} ${Boost_
 target_link_libraries (report_intr_dim  NonMetricSpaceLib ${LSHKIT_LIB} ${Boost_LIBRARIES} ${GSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries (test_clust       NonMetricSpaceLib ${LSHKIT_LIB} ${Boost_LIBRARIES} ${GSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries (bench_projection NonMetricSpaceLib ${LSHKIT_LIB} ${Boost_LIBRARIES} ${GSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries (knn_stat         NonMetricSpaceLib ${LSHKIT_LIB} ${Boost_LIBRARIES} ${GSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 # The following line is necessary to create an executable for the dummy application:
 target_link_libraries (dummy_app        NonMetricSpaceLib ${LSHKIT_LIB} ${Boost_LIBRARIES} ${GSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 
