--- a/test_batch_app/makefile
+++ b/test_batch_app/makefile
@@ -2,6 +2,7 @@
 NON_METRIC_SPACE_LIBRARY=../similarity_search
 NON_METRIC_SPACE_LIBRARY_INC=$(NON_METRIC_SPACE_LIBRARY)/include
 NON_METRIC_SPACE_LIBRARY_LIB=$(NON_METRIC_SPACE_LIBRARY)/release
+#NON_METRIC_SPACE_LIBRARY_LIB=$(NON_METRIC_SPACE_LIBRARY)/debug
 
 #LIB_GSL=-lgsl -lgslcblas -llshkit
 
@@ -22,6 +23,6 @@ clean:
 	rm -f *.o $(BIN)
 
 # Note -pthread: this enables threads!!!
-test_batch_mod: test_batch_mod.o makefile
+test_batch_mod: test_batch_mod.o makefile $(NON_METRIC_SPACE_LIBRARY_LIB)/libNonMetricSpaceLib.a
 	$(CXX) -o$@ test_batch_mod.o -lNonMetricSpaceLib -L$(NON_METRIC_SPACE_LIBRARY_LIB) $(LIB_GSL) -pthread -fopenmp
 
