Use pybind11 for python bindings
Pybind11 removes a lot of the boilerplate with creating python bindings for c++ projects.
This code switches the NMSLIB bindings to using pybind11, fixing a couple minor
problems:

 * Works with Python2/3
 * Works on Linux / OSX / Windows
 * Add docstrings for each function, and sensible default parameters
 * More pythonic API: exposes an Index object with methods on it
 * No need to call nmslib.freeIndex anymore (memory gets GC'ed with python object)

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,10 @@ cmake_install.cmake
 similarity_search/debug
 similarity_search/release
 similarity_search/src/Makefile
+similarity_search/Makefile
+similarity_search/apps/Makefile
+similarity_search/test/Makefile
 *.o
-
+*.so
+*.pyc
+*.egg-info/
