Run flake8 as part of the build
For files in the python_bindings folder, run flake8 to detect style
issues and errors automatically.

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_install:
   source venv/bin/activate
 install:
   - cmake similarity_search && make -j 4
-  - travis_wait travis_retry pip install -r python_bindings/requirements.txt scipy six
+  - travis_wait travis_retry pip install -r python_bindings/requirements.txt scipy six flake8
   - travis_retry cd python_bindings && python setup.py build install && cd ..
 
 script:
@@ -40,6 +40,7 @@ script:
   fi
   cd python_bindings
   python setup.py test
+  flake8
   cd ..
 cache:
   - apt
