--- a/python_bindings/tox.ini
+++ b/python_bindings/tox.ini
@@ -5,3 +5,14 @@ envlist = py27, py35, py36
 commands = {envpython} setup.py test
 deps =
     -rrequirements.txt
+
+[testenv:style]
+deps =
+    -rrequirements.txt
+    flake8
+
+commands =
+    flake8
+
+[flake8]
+max-line-length = 100
